prototype basic policy chain

--- a/apicast/http.d/init.conf
+++ b/apicast/http.d/init.conf
@@ -8,7 +8,7 @@ init_by_lua_block {
     require("resty.core")
     require('resty.resolver').init()
 
-    local module = require('module')
+    local module = require('policy_chain')
 
     if not module then
       ngx.log(ngx.EMERG, 'fatal error when loading the root module')
@@ -21,7 +21,7 @@ init_by_lua_block {
 }
 
 init_worker_by_lua_block {
-    require('module'):init_worker()
+    require('policy_chain'):init_worker()
 }
 
 lua_shared_dict init 16k;
