--- a/apicast/http.d/upstream.conf
+++ b/apicast/http.d/upstream.conf
@@ -2,7 +2,7 @@
 upstream upstream {
   server 0.0.0.1:1;
 
-  balancer_by_lua_block { require('policy_chain'):balancer() }
+  balancer_by_lua_block { require('executor'):balancer() }
 
   keepalive 1024;
 }
@@ -10,7 +10,7 @@ upstream upstream {
 upstream backend_upstream {
   server 0.0.0.1:1;
 
-  balancer_by_lua_block { require('policy_chain'):balancer() }
+  balancer_by_lua_block { require('executor'):balancer() }
 
   keepalive 1024;
 }
