[http_ng] work with ngx backend
backend using ngx.location.capture

--- a/apicast/http.d/upstream.conf
+++ b/apicast/http.d/upstream.conf
@@ -14,3 +14,14 @@ upstream backend_upstream {
 
   keepalive 1024;
 }
+
+
+upstream http_client {
+  server 0.0.0.1:1;
+
+  balancer_by_lua_block {
+    require('resty.http_ng.backend.ngx'):balancer()
+  }
+
+  keepalive 1024;
+}
