--- a/apicast/conf.d/apicast.conf
+++ b/apicast/conf.d/apicast.conf
@@ -9,6 +9,38 @@ set_by_lua_block $deployment {
 # ssl_session_fetch_by_lua_block { require('module').call() }
 # ssl_session_store_by_lua_block { require('module').call() }
 
+location = /___http_call {
+  internal;
+
+  set $url '';
+
+  set $endpoint '';
+
+  set $host_header '';
+  set $connection_header 'close';
+  set $options '';
+  set $grant_type '';
+
+  proxy_pass $endpoint;
+  proxy_pass_request_headers off;
+  proxy_pass_request_body on;
+  proxy_http_version 1.1;
+
+  proxy_set_header Host $host_header;
+  proxy_set_header Connection $connection_header;
+  proxy_set_header X-Real-IP  $remote_addr;
+  proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+  proxy_set_header X-3scale-User-Agent $deployment;
+  proxy_set_header X-3scale-Version $version;
+  proxy_set_header User-Agent $user_agent;
+  proxy_set_header X-3scale-OAuth2-Grant-Type $grant_type;
+  proxy_set_header 3scale-options $options;
+
+  rewrite_by_lua_block {
+    require('resty.http_ng.backend.ngx'):resolver()
+  }
+}
+
 location = /threescale_authrep {
   internal;
 
