replace internal endpoints with backend client
* now there is just 1 location for contacting backend

--- a/apicast/conf.d/apicast.conf
+++ b/apicast/conf.d/apicast.conf
@@ -74,7 +74,6 @@ location @out_of_band_authrep_action {
   proxy_pass_request_headers off;
 
   set_by_lua $original_request_time 'return ngx.var.request_time';
-  set_by_lua $backend_endpoint 'return ngx.var.post_action_backend_endpoint';
 
   content_by_lua_block { require('module'):post_action() }
 
@@ -83,9 +82,6 @@ location @out_of_band_authrep_action {
     require('module'):log()
   }
 }
-
-set $backend_endpoint 'http://127.0.0.1:8081';
-
 
 location / {
   set $cached_key null;
@@ -104,7 +100,7 @@ location / {
   set $post_action_backend_endpoint '';
   set $backend_authentication_type null;
   set $backend_authentication_value null;
-  set $version null;
+  set $version '';
   set $real_url null;
 
   set $post_action_impact null;
@@ -130,56 +126,6 @@ location / {
   post_action @out_of_band_authrep_action;
 
   include ../apicast.d/location.d/*.conf;
-}
-
-location = /_threescale/oauth_store_token {
-  internal;
-  proxy_pass_request_headers off;
-  proxy_set_header  X-Real-IP  $remote_addr;
-  proxy_set_header  X-Forwarded-For $proxy_add_x_forwarded_for;
-  proxy_set_header  Host  "$backend_host";
-  proxy_set_header  User-Agent "$user_agent";
-  proxy_set_header  X-3scale-User-Agent "$deployment";
-  proxy_set_header  X-3scale-Version "$version";
-
-  proxy_pass $backend_endpoint/services/$service_id/oauth_access_tokens.xml?$backend_authentication_type=$backend_authentication_value;
-}
-
-location = /_threescale/check_credentials {
-  internal;
-
-  proxy_pass_request_headers off;
-  proxy_set_header  X-Real-IP  $remote_addr;
-  proxy_set_header  X-Forwarded-For $proxy_add_x_forwarded_for;
-  proxy_set_header  Host  "$backend_host";
-  proxy_set_header  User-Agent "$user_agent";
-  proxy_set_header  X-3scale-User-Agent "$deployment";
-  proxy_set_header  X-3scale-Version "$version";
-
-  proxy_pass $backend_endpoint/transactions/oauth_authorize.xml?$backend_authentication_type=$backend_authentication_value&service_id=$service_id&$args;
-}
-
-location = /threescale_oauth_authrep {
-  internal;
-
-  set_by_lua_block $log {
-    local log = ngx.var.arg_log;
-    if log then return '&' .. ngx.unescape_uri(log) end
-  }
-  set $path /transactions/oauth_authrep.xml?$backend_authentication_type=$backend_authentication_value&service_id=$service_id&$usage&$credentials$log;
-  proxy_pass_request_headers off;
-  proxy_http_version 1.1;
-  proxy_pass $backend_endpoint$path;
-  proxy_set_header  Host  "$backend_host";
-  proxy_set_header  User-Agent "$user_agent";
-  proxy_set_header  X-3scale-User-Agent "$deployment";
-  proxy_set_header  X-3scale-Version "$version";
-  proxy_set_header  Connection "";
-  proxy_set_header  X-3scale-OAuth2-Grant-Type "authorization_code";
-
-  rewrite_by_lua_block {
-    ngx.var.real_url = ngx.var.backend_endpoint .. ngx.var.path
-  }
 }
 
 # This exposes a health check for kubernetes environments
