--- a/apicast/http.d/ssl.conf
+++ b/apicast/http.d/ssl.conf
@@ -5,10 +5,10 @@
 ## it really hard to have working cross platform configuration.
 #
 lua_ssl_verify_depth 5;
-lua_ssl_trusted_certificate ca-bundle.crt;
+lua_ssl_trusted_certificate "{{ ca_bundle | default: 'ca-bundle.crt' }}";
 
 proxy_ssl_server_name on;
 proxy_ssl_name $http_host;
 proxy_ssl_verify_depth 5;
 
-proxy_ssl_trusted_certificate ca-bundle.crt;
+proxy_ssl_trusted_certificate "{{ ca_bundle | default: 'ca-bundle.crt' }}";
